--- a/templates/g5_helium/custom/scss/main.compiled.css
+++ b/templates/g5_helium/custom/scss/main.compiled.css
@@ -559,10 +559,12 @@ video {
 .view-registration.em-formRegistrationCenter .emundus-form .em-form-intro ul li {
             line-height: 24px;
           }
-.view-registration.em-formRegistrationCenter .emundus-form .fabrikGroupColumns.fabrikGroup .row-fluid {
-          -moz-column-gap: 0;
-               column-gap: 0;
-        }
+@media all and (min-width: 480px) {
+          .view-registration.em-formRegistrationCenter .emundus-form .fabrikGroupColumns.fabrikGroup .row-fluid {
+            -moz-column-gap: 0;
+                 column-gap: 0;
+          }
+      }
 .view-registration.em-formRegistrationCenter .emundus-form .fabrikGroup {
         margin-bottom: 0;
       }
@@ -633,6 +635,9 @@ form.fabrikForm {
 form.fabrikForm .row-fluid{
       width: auto;
     }
+form.fabrikForm .row-fluid:before, form.fabrikForm .row-fluid:after {
+        display: none;
+      }
 form.fabrikForm .fabrikElement {
       margin-top: var(--em-form-label-margin-bottom);
       position: relative;
